# BitgetETHMMBIFunding

./: .env.example  .gitignore  AGENTS.md  MEMO.txt  MIGRATION.md  Makefile  PROJECT_SPEC.md  README.md  REPO_ID.txt  STATUS.md  config.churn_test.yaml  config.example.yaml  config.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
.venv311/: pyvenv.cfg
bot/: app.py  config.py  types.py
reports/: cancel_aggressive_fix_candidate_summary.csv  cancel_aggressive_policy_decision.md  cancel_aggressive_policy_sim_details.csv  cancel_aggressive_policy_sim_summary.csv  cancel_aggressive_quality_details.csv  cancel_aggressive_quality_summary.csv  combined_quote_filter_sim_details.csv  combined_quote_filter_sim_summary.csv  guard_directional_success.csv  guard_forward_summary.csv  guard_overlap_details.csv  guard_overlap_summary.csv  guard_trigger_details.csv  market_quality_filter_sim_details.csv  market_quality_filter_sim_summary.csv  pre_quote_blocker_summary.csv  quote_fade_tfi_fade_exit_quality_details.csv  quote_fade_tfi_fade_exit_quality_summary.csv  quote_placement_details.csv  quote_placement_summary.csv  spread_ev_scenarios.csv  stop_reason_counts.csv  suppressed_cancel_forward_returns.csv  suppressed_cancel_forward_summary.csv
scripts/: analyze_active_quote_cancel_quality.py  analyze_cancel_aggressive_density.py  analyze_cancel_aggressive_quality.py  analyze_guard_directional_success.py  analyze_guard_directional_success_recent.py  analyze_guard_forward_returns.py  analyze_guard_forward_summary.py  analyze_guard_overlap.py  analyze_guard_triggers.py  analyze_latent_replay.py  analyze_live_profitability.py  analyze_pre_quote_blockers.py  analyze_quote_fade_policy_quality.py  analyze_quote_fade_tfi_fade_exit_quality.py  analyze_quote_lifecycle.py  analyze_quote_placement.py  analyze_spread_ev_scenarios.py  analyze_stop_reasons.py  check_vip_tier.py  (+18 more)
(+110 files in other folders)
